SAK-52045 - New minimalLTI13 and Long deprecation cleanup